# formvision

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py
demo/omr_admission/: README.md  __init__.py  runtime.py
docs/: architecture-refactor-plan.md  architecture.md  current-workflows.md  design-decisions.md  documentation-audit.md  flow.md  limitations.md  models.md  synthetic-data.md  templates.md  workflows.md
formvision/: __init__.py  cli.py
formvision/config/: __init__.py  schema.py  settings.py
formvision/evaluation/: __init__.py  demo_batch.py
formvision/exporters/: __init__.py  csv_exporter.py  json_exporter.py  sqlite_exporter.py
formvision/extractors/: __init__.py  barcode_extractor.py  base.py  (+3 more)
scripts/: build_digit_overlay_example.py  build_scanned_variants.py  build_student_batch.py  process_demo_batch.py  synthetic_cli.py
synthetic/: __init__.py  digit_strip.py  mnist_digits.py  mnist_exporter.py  scan_simulator.py  synthetic_templates.py
tests/: test_architecture_boundaries.py  test_behavior_contracts.py  test_cli_separation.py  test_demo_batch.py  test_demo_entrypoint.py  test_demo_runtime.py  test_demo_template_reference.py  test_digit_segmenter.py  test_doctr_engine.py  test_omr_extractor.py  test_page_frame_normalizer.py  test_pipeline.py  test_pipeline_engine_requirements.py  test_scan_simulator.py  test_synthetic_omr_sheet.py  test_validators.py
tools/: layout_viewer.html
training/: evaluate_icr.py  evaluate_ocr.py  train_digit_sequence.py  train_mnist_digit.py
(+41 files in other folders)
