[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "formvision"
version = "0.1.0"
description = "Template-driven synthetic form processing demo with OpenCV, OCR, ICR, OMR and QR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "opencv-python>=4.10,<5",
  "pillow>=10.0",
  "qrcode>=8.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mnist = ["torch>=2.0", "torchvision>=0.15"]
ocr = ["python-doctr[torch]>=0.11"]

[project.scripts]
formvision = "formvision.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["formvision*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
